Fix alignment issue in home.php and add centrer class

--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -55,6 +55,13 @@
     }
 
 }
+/*================NAV=====================*/
+
+.centrer{
+    left: 50%;
+    transform: translateX(-50%);
+}
+
 /*================LOGIN=====================*/
 .box{
     position: relative;
